# QAOA-with-Grover-mixer

./: .gitignore  .gitmodules  CMakeLists.txt  Optimizers.md  README.md  benchmark_instances.txt  landscape.c  main.c  plots.py  tree.txt  unit_test.c
QAOA_python/: classical_ingredients.py  qaoa.py
QTG_amplitude_amplification/: gurobi_test.py
QTG_amplitude_amplification/include/: combo.h  knapsack.h  qaoa.h
QTG_amplitude_amplification/src/: combo.c  knapsack.c  qaoa.c  simulate.c  syslinks.c
QTG_induced_QAOA/: cmbcount  main  makefile
QTG_induced_QAOA/include/: knapsack.h  stategen.h
QTG_induced_QAOA/src/: stategen.c
benchmark_instances/: benchmark_instance_n10_g3.txt  benchmark_instance_n11_g3.txt  benchmark_instance_n12_g3.txt  benchmark_instance_n13_g3.txt  benchmark_instance_n14_g3.txt  benchmark_instance_n15_g4.txt  benchmark_instance_n16_g4.txt  benchmark_instance_n17_g4.txt  benchmark_instance_n18_g4.txt  benchmark_instance_n19_g4.txt  benchmark_instance_n20_g5.txt  benchmark_instance_n21_g5.txt  benchmark_instance_n22_g5.txt  benchmark_instance_n23_g6.txt  benchmark_instance_n24_g6.txt  benchmark_instance_n25_g6.txt  benchmark_instance_n26_g6.txt  benchmark_instance_n27_g6.txt  benchmark_instance_n28_g6.txt  benchmark_instance_n29_g6.txt  benchmark_instance_n30_g6.txt  benchmark_instance_n31_g6.txt  benchmark_instance_n32_g6.txt  benchmark_instance_n33_g6.txt  benchmark_instance_n34_g6.txt  benchmark_instance_n35_g6.txt  benchmark_instance_n5_g1.txt  benchmark_instance_n6_g1.txt  benchmark_instance_n7_g2.txt  benchmark_instance_n8_g2.txt  benchmark_instance_n9_g2.txt
executables/: generate  generator_input.txt  landscape  main  server_run  test  testfile
executables/n_30_c_1023_g_3_f_0.300000_eps_0_s_50/: test.in
executables/n_30_c_1023_g_5_f_0.300000_eps_0_s_50/: test.in
include/: copula_count.h  general_count.h  general_qaoa.h  intarray.h  knapsack.h  qaoa.h  qaoa_qtg.h  qtg_count.h  qtgcount.h  stategen.h
instances/n_10_c_1023_g_3_f_0.3_eps_0_s_50/: test.in
instances/n_11_c_1023_g_3_f_0.3_eps_0_s_50/: test.in
instances/qkp15/: quad_knap.txt
plotting/: histogram.py
src/: combo.c  combowrp.c  copula_count.c  general_count.c  general_qaoa.c  generator.cpp  knapsack.c  qaoa.c  qaoa_qtg.c  qtg_count.c  qtgcount.c  stategen.c  syslinks.c
(+812 files in other folders)
